--- a/app/src/css/main-page.css
+++ b/app/src/css/main-page.css
@@ -82,13 +82,23 @@
     font-weight: 400;
     line-height: 18px;
 }
-.right-side-faq-content{
+.right-side-faq-content {
     display: flex;
     flex-direction: column;
     gap: 20px;
     overflow-y: auto;
-    overflow-x:hidden;
-}
+    overflow-x: hidden;
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #1E1F36;
+      border-radius: 4px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #F47B56;
+    }
+  }
 .paragraph-button img{
     transition: 0.15s;
     user-select: none;
@@ -153,14 +163,9 @@
     }
     .right-side-faq-content{
         align-items: center;
-        height: 200px;
+        height: 300px;
         overflow-y: auto;
         overflow-x: none;
         padding: 20px;
-    }
-}
-@media (max-width: 400px) {
-    .faq-paragraph{
-        max-width: 334px;
     }
 }
